--- a/ProjectDatotAngularC/startPage.html
+++ b/ProjectDatotAngularC/startPage.html
@@ -1,11 +1,13 @@
 ﻿
 <html ng-app="datotTemplate">
 <head>
-    <!--<link href="../../../Content/bootstrap.min.css" rel="stylesheet" />
-    <script src="Scripts/angular.min.js"></script>
-    <script src="Scripts/angular-ui-router.min.js"></script>-->
+   <!--<link href="../../../Content/bootstrap.min.css" rel="stylesheet" />-->
+    <!--<script src="Scripts/bootstrap.min.js"></script>-->
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <!--<script src="Scripts/bootstrap.min.js"></script>-->
+  
     <!-- CSS (load bootstrap) -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    
     <style>
         .navbar {
             border-radius: 0;
@@ -17,18 +19,16 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
  -->
     <script src="Scripts/angular.min.js"></script>
+    <!--<script src="Scripts/angular.min.js"></script>-->
     <script src="Scripts/angular-route.min.js"></script>
     <script src="Scripts/angular-ui-router.min.js"></script>
 
     <script src="modules/datot/datot-module.js"></script>
     <script src="modules/datot/datot-config.js"></script>
     <script src="modules/datot/controllers/dugmaCtrl.js"></script>
-    <script src="modules/datot/controllers/loginCtrl.js"></script>
-    <script src="modules/datot/services/authentication.service.js"></script>
-    <script src="modules/datot/services/flash.service.js"></script>
-    <script src="modules/datot/services/user.service.js"></script>
-    <script src="modules/datot/services/user.service.local-storage.js"></script>
-    <script src="modules/app.js"></script>
+    <script src="modules/datot/controllers/councilsCtrl.js"></script>
+    <script src="modules/datot/services/saveService.js"></script>
+     <script src="modules/app.js"></script>
 </head>
 
 <body>
@@ -40,7 +40,8 @@
         </div>
         <ul class="nav navbar-nav">
             <li><a ui-sref="home">Home</a></li>
-            <li><a ui-sref="dugma">Example</a></li>
+            <li><a ui-sref="dugma">dugma</a></li>
+            <li><a ui-sref="councils">councils</a></li>
         </ul>
     </nav>
 
